--- a/typeMaster.css
+++ b/typeMaster.css
@@ -1,7 +1,10 @@
-@import url("./mobilesStyles.css") screen and (max-width: 375px);
-
+/*@import url("./tabstyles.css") screen and (max-width: 768px);
+@import url("./mobilesStyles.css") screen and (max-width: 375px); */
+    
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* GENERAL STYLES*/
+
+/*===== GENERAL STYLES=====
+============================*/
 :root{
     --button1-color: #F16718;
     --button1-hover: #FF9B62;
@@ -11,63 +14,88 @@
 
 }
 
+/* general h1 styles*/
 h1{
     font-family: "Barlow", Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 56px;
+    font-size: 40px;
     line-height: 56px;
-    font-weight: 900;
+    
     color: black;
     text-transform: uppercase;
 }
+
+/*general h2 styles*/
 h2{
     font-family: "Barlow", Verdana, Geneva, Tahoma, sans-serif;
     font-size: 32px;
     line-height: 32px;
+    width: 100%;
     color: black;
     text-transform: uppercase;
-    width: fit-content;
+    width: 100%;
     height: fit-content;
     text-align: center;
     position: relative;
     top: 24px;
     margin-bottom: 48px;
+    height: auto
 }
+
+/*general h3 styles*/
 h3{
     font-family: "Barlow", Verdana, Geneva, Tahoma, sans-serif;
     font-size: 24px;
     line-height: 26px;
+    width: 100%;
     color: black;
+    height: auto;
 
 }
+
+/*general paragraph styles*/
 p{
     font-family: "Barlow", Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px, medium;
     line-height: 26px;
+    width: 100%;
     color: black;
     text-align: center;
     text-transform: capitalize;
-    position: relative;
+    height: auto
 }
 
-/*HEADER STYLES
-================*/
+.intro-el, .icon{
+    max-width: 375px;
+    height: auto;
+}
+
+.main-header{
+    height: auto;
+}
+
+/*===== PAGE HEADER STYLES=====
+================================*/
  
 .header-button{
     position: absolute;
     right: 0px;
     height: 40px;
-    border: 1px solid var(--button2-color);
     width: fit-content;
-    border-radius: 5%;
-    text-align: center;
+
+    border: 1px solid var(--button2-color);
     background-color: var(--button2-color);
+    border-radius: 5%;
+
+    text-align: center;
     text-transform: uppercase;
    
 }
+
 .header-button:hover{
     background-color: var(--button2-hover);
 }
-.header-img{
+
+.header-icon{
     position: absolute;
     height: 40px;
     width: 40px;
@@ -75,72 +103,319 @@ p{
     text-transform: uppercase;
 }
 
-/*INTRODUCTION*/
-.intro-h1{
-    position: relative;
-    width: 327px;
-    height: fit-content;
-    margin: auto;
+
+/*=======INTRODUCTION======
+=============================*/
+.intro{
+    position: relative;     /*To help postion elements*/
 }
-.intro-p{
-    position: relative;
-    width: 327px;
-    height: fit-content;
-    margin: auto;
-    top: 32px;
-    text-align: justify;
-    text-transform: capitalize;
-}
+
+/*Footer of introductory box*/
 .intro-footer{
     position: relative;
-    width: 310px;
-    height: 48px;
-    margin: auto;
-    top: 32px;
+    width: 100%;
+    height: 50px;
 }
+
+
 .intro-footer-button{
     position: absolute;
     left: 0%;
-    right: 51.61%;
     top: 0%;
     bottom: 0%;
+    height: 100%;
+
     border: 1px solid var(--button1-color);
     background-color: var(--button1-color);
     border-radius: 7%;
 }
+
 .intro-footer-button:hover{
     background-color: var(--button1-hover);
 }
+
 .intro-footer-p{
     position: absolute;
-    height: 26px;
     width: fit-content;
+    height: 26px;
     right: 0px;
     bottom: 0px;
+
     text-transform: uppercase;
 }
 
-.bluetooth-img, .compatibility-img, .battery-img, .backlit-img{
+/*=====ICONS ELEMENT STYLES=====
+===============================*/
+.bluetooth-icon, .compatibility-icon, .battery-icon, .backlit-icon{
     position: relative;
+    top: 0px;
+
     display: flex;
     justify-content: center;
     align-items: center;
+
     width: 65px;
     height: 65px;
-    top: 0px;
-    background-color: #F16718;
     margin: auto;
+
+    background-color: #F16718;
+    
 }
 
-/*FOOTER STYLES*/
+/*=====FOOTER STYLES=====
+=========================*/
 .main-footer{
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 327px;
     height: 16px;
     margin: auto;
+    margin-top: 100px;
     text-align: center;
 }
 
-/*==========================================================================================================
-==========================================================================================================*/
+/*PHONE STYLE*/
+@media screen and (max-width: 375px) {
+    .keyboard-pic{
+        background-image: url("./assets/mobile/image-keyboard.jpg");
+        background-size: cover;
+        
+        position: relative;
+        left: 24px;
+
+        width: 372px;
+        height: 331px;
+        margin: 5%;
+
+        border-radius: 10%;
+    }
+    .phone-pic{
+        background-image: url("./assets/mobile/image-phone-and-keyboard.jpg");
+        background-size: cover;
+
+        position: relative;
+        left: -22px;
+
+        width: 129px;
+        height: 193px;
+
+        border-radius: 10%;
+
+        
+    
+    }
+    .glass-pic{
+        background-image: url("./assets/mobile/image-glass-and-keyboard.jpg");
+        background-size: cover;
+        
+        position: absolute;
+        top: 730px;
+        right: 0;
+        
+        width: 220px;
+        height: 193px;
+        margin: 0 10px 0 5px;
+
+        border-radius: 10%;
+    }
+    .intro p{
+        text-align: left;
+    }
+}
+
+/*Tablet style*/
+@media screen and (min-width:375px) and (max-width: 768px) {
+    /*body{
+        display: flex;
+        flex-direction: column;
+    }
+    */
+    .intro-el, .icon{
+        max-width: 330px;
+        height: auto;
+    }
+    .introduction{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .introduction > div{
+        margin: 5px;
+    }
+
+    .intro{
+        float: left;
+        height: 435px;
+    }
+    .keyboard-pic{
+        background-image: url("./assets/tablet/image-keyboard.jpg");
+        background-size: cover;
+
+        justify-self: end;
+
+        width: 478px;
+        height: 435px;
+
+        border-radius: 5% 0 0 5%;
+
+
+    }
+    .phone-pic{
+        background-image: url("./assets/tablet/image-phone-and-keyboard.jpg");
+        background-size: cover;
+
+        width: 214px;
+        height: 320px;
+
+        
+    
+    }
+    .glass-pic{
+        background-image: url("./assets/tablet/image-glass-and-keyboard.jpg");
+        background-size: cover;
+               
+        width: 645px;
+        height: 320px;
+        
+        border-radius: 10%;
+    }
+    .wireless-el{
+        display: flex;
+        max-width: 768px;
+
+    }
+
+    .wireless-el  p{
+        text-align: left;
+    }
+    .wireless-el h2{
+        text-align: left;
+        align-self: flex-start;
+        
+    }
+
+    .icon-div{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
+
+/*Desktop style*/
+@media screen and (min-width: 766px) {
+    .introduction{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .icon-div{
+        display: flex;
+
+    }
+    .empty1, .empty2{
+        width: 125px;
+        height: 240px;
+        background-color: #E8EFF2;
+        flex-basis: 140px;
+    
+    }
+    body{
+        display:grid;
+        /*grid-template-areas: " empty1 screen empty2" ;*/
+        
+        grid-template-columns: 150px 1010px 150px ;
+        max-width: 1440px;
+    }
+
+    .empty1{
+        order: 1;
+        border-radius: 0 10% 10% 0;
+       /* grid-area: "empty1";*/
+       grid-column: 1/2;
+       justify-content: space-between;
+       align-self: center;
+    }
+
+    .empty2{
+        order: 3;
+        border-radius: 10% 0 0 10%;
+        /*grid-area: "empty2"; */
+        grid-column: 3/4;
+        justify-self: end;
+    }
+    
+   
+    .screen-div{
+       /* grid-area: "screen"; */
+       grid-column: 2/3;
+        position: relative;
+        order: 2;
+       
+    }
+    
+
+    .keyboard-pic{
+        background-image: url("./assets/desktop/image-keyboard.jpg");
+        background-size: cover;
+        
+        margin-left: 50px;
+
+        width: 540px;
+        height: 480px;
+
+        border-radius: 5% ;
+    
+
+    }
+    .phone-pic{
+        background-image: url("./assets/desktop/image-phone-and-keyboard.jpg");
+        background-size: cover;
+        
+        width: 255px;
+        height: 480px;
+        
+        
+    }
+    .glass-pic{
+        background-image: url("./assets/desktop/image-glass-and-keyboard.jpg");
+        background-size: cover;
+              
+        width: 350px;
+        height: 480px;
+        
+        border-radius: 10%;
+        
+    }
+
+   .wireless-el{
+       display: flex;
+       flex-direction: column;
+   }
+   p, h1, h2{
+       text-align: left;
+       
+   }
+   h2{
+       margin-top: 64px;
+   }
+
+   .icon-div{
+    margin-top: 100px;
+    justify-content: space-around;
+    }
+    .icon{
+        position: relative;
+        margin: 5px;
+    }
+    .bluetooth-icon, .compatibility-icon, .battery-icon, .backlit-icon{ 
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+
+  
+}
+
+
+
+
